# libwebrtc-wrapper

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.ubuntu  Makefile  README.md
.cargo/: config.toml
.serena/: project.yml
crates/libwebrtc-sys/: Cargo.toml  build.rs
crates/libwebrtc-sys/src/: lib.rs
crates/libwebrtc-sys/wrapper/: libcxx_abi.h  wrapper.cpp  wrapper.h
crates/libwebrtc-sys/wrapper/include/: __config_site
crates/whep-client/: Cargo.toml
crates/whep-client/src/: main.rs  mkv_writer.rs  whep.rs
crates/whip-client/: Cargo.toml
crates/whip-client/src/: lib.rs  main.rs  mkv_reader.rs  whip.rs
docs/: audio-rtp-to-audio-frame-implementation-guide.md  libwebrtc-packet-to-frame-flow.md  video-rtp-to-encoded-frame-implementation-guide.md  whep-whip-client-design.md
