[workspace]
resolver = "2"
members = [
    "crates/whep-client",
    "crates/whip-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Azunyan1111/libwebrtc-wrapper"

[workspace.dependencies]
# WebRTC (LiveKit)
libwebrtc = "0.3"

# Build
cc = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bytes
bytes = "1"

# URL parsing
url = "2"
