[package]
name = "whep-client"
version.workspace = true
edition.workspace = true

[dependencies]
libwebrtc = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
futures = "0.3"
parking_lot = "0.12"
