[package]
name = "whip-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "whip-client"
path = "src/main.rs"

[dependencies]
libwebrtc = { workspace = true }
webrtc-sys = "0.3.21"
cxx = "1"
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
futures = "0.3"
parking_lot = "0.12"
webm-iterable = "0.6"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
